force-app/main/default/objects/Campaign/fields/Campaign_Country__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Country__c</fullName>
    <description>Field stores the country name of the campaign</description>
    <label>Campaign Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CountryCustom</valueSetName>
    </valueSet>
</CustomField>