force-app/main/default/objects/Campaign/fields/Campaign_District__c.field-meta.xml
<CustomField>
    <fullName>Campaign_District__c</fullName>
    <description>DCP 10583- Dependent on Campaign Region</description>
    <label>Campaign District</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Campaign_Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>AMEA</fullName>
                <isActive>false</isActive>
                <label>AMEA</label>
            </value>
            <value>
                <fullName>AMEA All</fullName>
            </value>
            <value>
                <fullName>AMEA Channel Partners</fullName>
            </value>
            <value>
                <fullName>AMR</fullName>
                <isActive>false</isActive>
                <label>AMR</label>
            </value>
            <value>
                <fullName>AMR All</fullName>
            </value>
            <value>
                <fullName>AMR Canada</fullName>
            </value>
            <value>
                <fullName>AMR Central</fullName>
            </value>
            <value>
                <fullName>AMR Channel Partners</fullName>
            </value>
            <value>
                <fullName>AMR Latin America</fullName>
            </value>
            <value>
                <fullName>AMR NE</fullName>
            </value>
            <value>
                <fullName>AMR Northeast</fullName>
                <isActive>false</isActive>
                <label>AMR Northeast</label>
            </value>
            <value>
                <fullName>AMR Pacific</fullName>
            </value>
            <value>
                <fullName>AMR South</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
                <isActive>false</isActive>
                <label>ANZ</label>
            </value>
            <value>
                <fullName>APJ</fullName>
                <isActive>false</isActive>
                <label>APJ</label>
            </value>
            <value>
                <fullName>Austria Switzerland</fullName>
                <isActive>false</isActive>
                <label>Austria Switzerland</label>
            </value>
            <value>
                <fullName>Benelux</fullName>
                <isActive>false</isActive>
                <label>Benelux</label>
            </value>
            <value>
                <fullName>Brazil/LATAM</fullName>
                <isActive>false</isActive>
                <label>Brazil/LATAM</label>
            </value>
            <value>
                <fullName>Canada</fullName>
                <isActive>false</isActive>
                <label>Canada</label>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
                <isActive>false</isActive>
                <label>EMEA</label>
            </value>
            <value>
                <fullName>EMEA Channel Partners</fullName>
                <isActive>false</isActive>
                <label>EMEA Channel Partners</label>
            </value>
            <value>
                <fullName>EUR</fullName>
                <isActive>false</isActive>
                <label>EUR</label>
            </value>
            <value>
                <fullName>EUR All</fullName>
            </value>
            <value>
                <fullName>EUR Channel Partners</fullName>
            </value>
            <value>
                <fullName>France</fullName>
                <isActive>false</isActive>
                <label>France</label>
            </value>
            <value>
                <fullName>France_Benelux</fullName>
                <isActive>false</isActive>
                <label>France_Benelux</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>