force-app/main/default/objects/Campaign/fields/Campaign_Region__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Region__c</fullName>
    <description>DCP 10583 Different Campaign Regions</description>
    <label>Campaign Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMR</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>AMEA</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Greater China</fullName>
                <isActive>false</isActive>
                <label>Greater China</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>