force-app/main/default/objects/Campaign/fields/Campaign_Subregion__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Subregion__c</fullName>
    <description>CMCM-1160 Updating from previous Campaign District field. Dependent on Campaign Region</description>
    <label>Campaign Subregion</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Campaign_Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>AMEA All</fullName>
            </value>
            <value>
                <fullName>AMEA Channel Partners</fullName>
            </value>
            <value>
                <fullName>AMR All</fullName>
            </value>
            <value>
                <fullName>AMR Canada</fullName>
            </value>
            <value>
                <fullName>AMR Central</fullName>
            </value>
            <value>
                <fullName>AMR Channel Partners</fullName>
            </value>
            <value>
                <fullName>AMR Corporate East</fullName>
            </value>
            <value>
                <fullName>AMR Corporate West</fullName>
            </value>
            <value>
                <fullName>AMR Latin America</fullName>
            </value>
            <value>
                <fullName>AMR NE</fullName>
            </value>
            <value>
                <fullName>AMR Pacific</fullName>
            </value>
            <value>
                <fullName>AMR South</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>EUR All</fullName>
            </value>
            <value>
                <fullName>EUR Channel Partners</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
            <value>
                <fullName>Intercontinental</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Korea</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>Macau</fullName>
            </value>
            <value>
                <fullName>Med</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>Nordic</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>