force-app/main/default/objects/Campaign/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>created as part of DCP-10583</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Based Seminar</fullName>
				<isActive>false</isActive>
                <label>Account Based Seminar</label>
            </value>
            <value>
                <fullName>Account Mapping</fullName>
            </value>
            <value>
                <fullName>Banner Ad</fullName>
            </value>
            <value>
                <fullName>Bing</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Booth</fullName>
            </value>
            <value>
                <fullName>Channel Partner Email</fullName>
            </value>
            <value>
                <fullName>Channel Partners</fullName>
            </value>
            <value>
                <fullName>China Website</fullName>
            </value>
            <value>
                <fullName>Conference Activities</fullName>
            </value>
            <value>
                <fullName>Content and Product Offerings</fullName>
            </value>
            <value>
                <fullName>Core Lab Partnership</fullName>
            </value>
            <value>
                <fullName>Customer Application Acceleration (CAAP)</fullName>
            </value>
            <value>
                <fullName>Customer Awareness</fullName>
            </value>
            <value>
                <fullName>Customer Notifications</fullName>
            </value>
            <value>
                <fullName>Customer Support Lead Generation (CSLG)</fullName>
            </value>
            <value>
                <fullName>Data Ops</fullName>
            </value>
            <value>
                <fullName>Digital Booth Engagement</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Drip Email</fullName>
            </value>
            <value>
                <fullName>EMEA Website</fullName>
            </value>
            <value>
                <fullName>eToc</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Event Email</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Field Sales</fullName>
            </value>
            <value>
                <fullName>Field Service</fullName>
            </value>
            <value>
                <fullName>Field Workshop</fullName>
				<isActive>false</isActive>
                <label>Field Workshop</label>
            </value>
            <value>
                <fullName>Global Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>