force-app/main/default/objects/Campaign/fields/Do_not_score__c.field-meta.xml
<CustomField>
    <fullName>Do_not_score__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DCP-37603-Update Campaign Object for &quot;Do Not Score&quot;</description>
    <label>Do not score</label>
    <type>Checkbox</type>
</CustomField>