force-app/main/default/objects/Campaign/fields/Evergreen_Status__c.field-meta.xml
<CustomField>
    <fullName>Evergreen_Status__c</fullName>
    <description>Field used to manage campaigns that are ongoing or &apos;Evergreen&apos;. This field is also synced to Hive9. Part of CMCM-7825</description>
    <inlineHelpText>If the evergreen status is &apos;Evergreen&apos;, the campaign is ongoing with no current end date identified. If the status is &apos;Not Evergreen&apos;, you must specify the campaign end date.</inlineHelpText>
    <label>Evergreen Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evergreen</fullName>
            </value>
            <value>
                <fullName>Not Evergreen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>