force-app/main/default/objects/Campaign/fields/Five9__Five9ReportEmail__c.field-meta.xml
<CustomField>
    <fullName>Five9__Five9ReportEmail__c</fullName>
    <label>Five9 Report Email</label>
    <type>Email</type>
</CustomField>