force-app/main/default/objects/Campaign/fields/Funnel__c.field-meta.xml
<CustomField>
    <fullName>Funnel__c</fullName>
	<description>This field tracks Campaign funnel stage (Top, Middle, Bottom) that helps marketing ops to better identify metrics of Tactics applied throughout the campaign funnel.</description>
    <inlineHelpText>Top: Awareness resources addressing prospect’s unique pain points with problem/solution content.
Middle: Consideration resources for product/service to fit prospect’s needs.
Bottom: Decision resources with in-depth product/service/competitive content.</inlineHelpText>
    <label>Funnel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top</fullName>
            </value>
            <value>
                <fullName>Middle</fullName>
            </value>
            <value>
                <fullName>Bottom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>