force-app/main/default/objects/Campaign/fields/Hive9_ID__c.field-meta.xml
<CustomField>
    <fullName>Hive9_ID__c</fullName>
    <description>DCP 10583</description>
    <label>Hive9 ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>