force-app/main/default/objects/Campaign/fields/Legacy_SFDC_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SFDC_Record_ID__c</fullName>
    <description>Legacy Field- Data to be populated by migration team from legacy systems</description>
    <label>Legacy SFDC Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>