force-app/main/default/objects/Campaign/fields/Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign__c</fullName>
    <description>DCP 10583</description>
    <label>Marketing Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Academics (Defend)</fullName>
                <isActive>false</isActive>
                <label>Academics (Defend)</label>
            </value>
            <value>
                <fullName>Accelerate (RH)</fullName>
                <isActive>false</isActive>
                <label>Accelerate (RH)</label>
            </value>
            <value>
                <fullName>Accelerator</fullName>
                <isActive>false</isActive>
                <label>Accelerator</label>
            </value>
            <value>
                <fullName>Ag Research (AG)</fullName>
                <isActive>false</isActive>
                <label>Ag Research (AG)</label>
            </value>
            <value>
                <fullName>Ag Testing (AG)</fullName>
                <isActive>false</isActive>
                <label>Ag Testing (AG)</label>
            </value>
            <value>
                <fullName>AmpliSeq</fullName>
                <isActive>false</isActive>
                <label>AmpliSeq</label>
            </value>
            <value>
                <fullName>APJ Regional Campaign (RH)</fullName>
                <isActive>false</isActive>
                <label>APJ Regional Campaign (RH)</label>
            </value>
            <value>
                <fullName>BGI Compete</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Brand/Compete</fullName>
                <isActive>false</isActive>
                <label>Brand/Compete</label>
            </value>
            <value>
                <fullName>Breeding Managers and SPs (Grow)</fullName>
                <isActive>false</isActive>
                <label>Breeding Managers and SPs (Grow)</label>
            </value>
            <value>
                <fullName>Cancer Research</fullName>
                <isActive>false</isActive>
                <label>Cancer Research</label>
            </value>
            <value>
                <fullName>Clinician Education and Awareness</fullName>
                <isActive>false</isActive>
                <label>Clinician Education and Awareness</label>
            </value>
            <value>
                <fullName>Comprehensive Genomic Profiling (OT)</fullName>
                <isActive>false</isActive>
                <label>Comprehensive Genomic Profiling (OT)</label>
            </value>
            <value>
                <fullName>Consumer Genomics</fullName>
                <isActive>false</isActive>
                <label>Consumer Genomics</label>
            </value>
            <value>
                <fullName>Core Cross Segment Platforms (Platforms)</fullName>
                <isActive>false</isActive>
                <label>Core Cross Segment Platforms (Platforms)</label>
            </value>
            <value>
                <fullName>Core New Product Introductions (Platforms)</fullName>
                <isActive>false</isActive>
                <label>Core New Product Introductions (Platforms)</label>
            </value>
            <value>
                <fullName>Core On-Market Products (Platforms)</fullName>
                <isActive>false</isActive>
                <label>Core On-Market Products (Platforms)</label>
            </value>
            <value>
                <fullName>Customer Success</fullName>
                <isActive>false</isActive>
                <label>Customer Success</label>
            </value>
            <value>
                <fullName>Customer Success (RH)</fullName>
                <isActive>false</isActive>
                <label>Customer Success (RH)</label>
            </value>
            <value>
                <fullName>Discover more with NGS (Micro)</fullName>
                <isActive>false</isActive>
                <label>Discover more with NGS (Micro)</label>
            </value>
            <value>
                <fullName>Does Not Support a Marketing Initiative</fullName>
            </value>
            <value>
                <fullName>Do More Surveillance with NGS (Micro)</fullName>
                <isActive>false</isActive>
                <label>Do More Surveillance with NGS (Micro)</label>
            </value>
            <value>
                <fullName>DO NOT USE: EXPIRED</fullName>
            </value>
            <value>
                <fullName>Dx Platforms</fullName>
                <isActive>false</isActive>
                <label>Dx Platforms</label>
            </value>
            <value>
                <fullName>Education and Influence</fullName>
                <isActive>false</isActive>
                <label>Education and Influence</label>
            </value>
            <value>
                <fullName>Emerging Microbiome Pharma (Micro)</fullName>
                <isActive>false</isActive>
                <label>Emerging Microbiome Pharma (Micro)</label>
            </value>
            <value>
                <fullName>Expectant Parent (RH)</fullName>
                <isActive>false</isActive>
                <label>Expectant Parent (RH)</label>
            </value>
            <value>
                <fullName>G4G</fullName>
                <isActive>false</isActive>
                <label>G4G</label>
            </value>
            <value>
                <fullName>GC MarCom</fullName>
                <isActive>false</isActive>
                <label>GC MarCom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>