force-app/main/default/objects/Campaign/fields/Marketing_Segment__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Segment__c</fullName>
    <description>DCP 10583</description>
    <label>Marketing Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agrigenomics</fullName>
            </value>
            <value>
                <fullName>Cancer Research</fullName>
            </value>
            <value>
                <fullName>Cell And Molecular Biology</fullName>
                <isActive>false</isActive>
                <label>Cell And Molecular Biology</label>
            </value>
            <value>
                <fullName>Cell And Molecular Biology Research</fullName>
            </value>
            <value>
                <fullName>Consumer Genetics</fullName>
                <isActive>false</isActive>
                <label>Consumer Genetics</label>
            </value>
            <value>
                <fullName>Consumer Genomics</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
                <isActive>false</isActive>
                <label>Education</label>
            </value>
            <value>
                <fullName>Forensics</fullName>
            </value>
            <value>
                <fullName>Genetic Disease Research</fullName>
            </value>
            <value>
                <fullName>Genetic Disease Testing</fullName>
            </value>
            <value>
                <fullName>Infectious Disease Testing</fullName>
            </value>
            <value>
                <fullName>Microbiology</fullName>
            </value>
            <value>
                <fullName>Non-Segment Activity</fullName>
            </value>
            <value>
                <fullName>Oncology Testing</fullName>
            </value>
            <value>
                <fullName>Pharmacogenomics</fullName>
                <isActive>false</isActive>
                <label>Pharmacogenomics</label>
            </value>
            <value>
                <fullName>Platforms</fullName>
            </value>
            <value>
                <fullName>Population Genomics</fullName>
            </value>
            <value>
                <fullName>Precision Health</fullName>
            </value>
            <value>
                <fullName>Preventive Health</fullName>
                <isActive>false</isActive>
                <label>Preventive Health</label>
            </value>
            <value>
                <fullName>Public Health Surveillance</fullName>
            </value>
            <value>
                <fullName>Public Outreach</fullName>
            </value>
            <value>
                <fullName>Reproductive Health</fullName>
            </value>
            <value>
                <fullName>Technical Training/Education</fullName>
            </value>
            <value>
                <fullName>Transplant Genomics</fullName>
                <isActive>false</isActive>
                <label>Transplant Genomics</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>