force-app/main/default/objects/Campaign/fields/ON24_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>ON24_Event_Id__c</fullName>
    <description>Unique ON24 ID.This field value is populated through integration .</description>
    <label>ON24 Event Id</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>