force-app/main/default/objects/Campaign/fields/Organization_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Organization_Ownership__c</fullName>
    <description>Field stores what department created the campaign</description>
    <label>Organization Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>