force-app/main/default/objects/Campaign/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <description>Field defines the type of program segment for the campaign</description>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Based</fullName>
            </value>
            <value>
                <fullName>Advisory Board</fullName>
            </value>
            <value>
                <fullName>Advocacy</fullName>
                <isActive>false</isActive>
                <label>Advocacy</label>
            </value>
            <value>
                <fullName>Awareness</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Evidence Generation</fullName>
                <isActive>false</isActive>
                <label>Evidence Generation</label>
            </value>
            <value>
                <fullName>Guidelines</fullName>
                <isActive>false</isActive>
                <label>Guidelines</label>
            </value>
            <value>
                <fullName>Influence Segment Ecosystem</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>KOL/Society Engagement</fullName>
                <isActive>false</isActive>
                <label>KOL/Society Engagement</label>
            </value>
            <value>
                <fullName>KOL Operations</fullName>
            </value>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
            <value>
                <fullName>Market Assessment</fullName>
            </value>
            <value>
                <fullName>Market Intelligence</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Partnership / Consortia</fullName>
            </value>
            <value>
                <fullName>Pipeline Acceleration</fullName>
            </value>
            <value>
                <fullName>Product Notification</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Sales Enablement</fullName>
            </value>
            <value>
                <fullName>Society and KOL Engagement</fullName>
            </value>
            <value>
                <fullName>Tradeshow/Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>