force-app/main/default/objects/Campaign/fields/Promo_ID__c.field-meta.xml
<CustomField>
    <fullName>Promo_ID__c</fullName>
    <description>DCP 10583</description>
    <label>Promo ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>