force-app/main/default/objects/Campaign/validationRules/Mandatory_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Fields</fullName>
    <active>true</active>
    <description>If Type != &apos;Sales Campaign - Targeted Prospecting&apos; then Marketing Segment is a required field</description>
    <errorConditionFormula>AND(
NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
OR(
ISPICKVAL(Type , &apos;Direct Mail&apos;),
AND(ISPICKVAL(Type , &apos;Email&apos;),NOT(ISPICKVAL(Channel__c,&apos;Channel Partners&apos;)),NOT(ISPICKVAL(Channel__c,&apos;Customer Notifications&apos;))),
ISPICKVAL(Type , &apos;Opt In Request&apos;),
ISPICKVAL(Type , &apos;Online Advertising&apos;),
ISPICKVAL(Type , &apos;Illumina Hosted Event&apos;),
ISPICKVAL(Type , &apos;Third Party Hosted Event&apos;),
AND(ISPICKVAL(Type , &apos;Webinar&apos;),NOT(ISPICKVAL(Channel__c,&apos;Tech Support&apos;))),
ISPICKVAL(Type , &apos;Contact Request&apos;),
ISPICKVAL(Type , &apos;Gated Content&apos;)
),
OR(
ISBLANK(TEXT(Marketing_Segment__c)),
AND(ISNEW(), ISBLANK(TEXT(Funnel__c))))
)</errorConditionFormula>
    <errorMessage>Marketing Segment and Funnel are Mandatory Fields for the Campaign &apos;Type&apos; you selected</errorMessage>
</ValidationRule>