force-app/main/default/objects/Campaign/validationRules/Only_Campaign_Owner_Creator_Can_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Campaign_Owner_Creator_Can_Edit</fullName>
    <active>false</active>
    <description>Only allow the Campaign owner or the Campaign creator to edit the three Campaign fields Program Type, Marketing Segment and Marketing Campaign</description>
    <errorConditionFormula>AND 
( 

    AND(   
       NOT(ISNEW()),
       OR(
          ISCHANGED(Marketing_Segment__c),
          ISCHANGED(Marketing_Campaign__c),
          ISCHANGED(Program_Type__c)   
          )
    ),

 AND( 
      $User.Id &lt;&gt;  CreatedBy.Id , 
      $User.Id &lt;&gt; OwnerId,
      $Profile.Name &lt;&gt;&apos;System Administrator&apos;
    ) 
)</errorConditionFormula>
    <errorMessage>Program Type, Marketing Segment and Marketing Campaign can only be edited by the Campaign owner or the Campaign Creator</errorMessage>
</ValidationRule>