force-app/main/default/objects/Campaign/validationRules/Prevent_Scoring_field_updates.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Scoring_field_updates</fullName>
    <active>true</active>
    <description>DCP-37603-Update Campaign Object for &quot;Do Not Score&quot;</description>
    <errorConditionFormula>AND(
 IF( Total_Campaign_Members__c &gt;0, True, False) ,
 OR(ISCHANGED( Do_not_score__c ), ISCHANGED( Campaign_Region__c ),ISCHANGED( Channel__c ) ),
 NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c) 
)</errorConditionFormula>
    <errorMessage>Do not score, Channel and Campaign Region fields cannot be updated as the Campaign has members associated to it.</errorMessage>
</ValidationRule>